# slm-on-cpu

./: .gitignore  README.md
slm-on-cpu/: README.md  pyproject.toml
slm-on-cpu/slm_on_cpu/: chatbot.py  lc_llama_cpp.py  llama-server-test.py  main.py  openai.py  org_main.py
slm_on_cpu/: lc_llama_cpp.py  llama-server-test.py  llms.py  testApi.py
